trunk/test/T3/Fail/WrongOverloading3.ic
/* Quicksort <n>: sorts an array of n integers initialized
with random values.
Output: the array contents before and after sorting.
*/

//class Library{
//    void println(string s) {}
//    void print(string s) {}
//    void printi(int i) {}
//    int stoi(string s, int i) {}
//   int random(int n) {}
//    void exit(int n) {}
//}


//class Quicksort extends Sort{


class A{
	int[] a;
	int dosom()
	{
		return 9;
	}
}

class B extends A{
	int b;
	int dosom(int x)
	{
		return 7;
	}
}
